# acefetch

./: README.md  channel_allow_filter_english.csv  channel_logos.xml  channel_name_replacements.csv  pyproject.toml  scrape.py
.github/workflows/: update-playlists.yaml
playlists/: english_ace.m3u  english_horus.m3u  english_local.m3u  english_local_content_id.m3u  english_local_infohash.m3u
