[project]
name = "acefetch"
version = "0.1.0"
description = "Fetches Ace Streams and generates M3U playlists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
]

[dependency-groups]
type = ["mypy", "types-requests>=2.32.0.20250602"]
lint = ["ruff"]


[tool.uv]
default-groups = ["type", "lint"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"] # Include absolutely all of Ruff's rules.
ignore = [
    # Modules
    "DJ", # Django not required

    # Specific rules
    "TD002",  # Verbose TODO
    "TD003",  # Verbose TODO
    "ISC001", # conflict in the formatter
    "COM812", # conflict in the formatter
    "T201",   # Print is fine here
    "S314", # Default XML is fine
]


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40


[tool.mypy]
files = ["scrape.py"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "type-arg",
]
